Baopngch18183/UI rc1.4 (#17)
* Create README.md

* Update UI for Studio & some problem

- Update:
   + UI for movie studio
   + UI for studio edit movie
   + Chart hasn't been updated yet
   + UI for Studio create movie not updated yet
- Note:
   + Delete function on studio movie not active yet
   + Studio create movie not active yet, it require some ID, but no ID is displayed.
   + Need add MovieDescription, MovieIMG.
   + Need fix some problem
above list

* RC1.2 (#11)

* Baopngch18183/UI rc1.2 (#12)

* Baopngch18183/UI rc1.3 (#13)

* Update MovieModel.cs

* Update

* Update CreateStudio.razor

Co-authored-by: Thuyen21 <65522631+Thuyen21@users.noreply.github.com>
Co-authored-by: thuyen21 <thuyennhgch18080@fpt.edu.vn>

* first

* MoviesDescription

* Update EditMovieStudio.razor

* Update CreateStudio.razor

* Update MovieModel.cs

Co-authored-by: baopngch18183 <baopngch18183@fpt.edu.vn>
Co-authored-by: baopngch18183 <65522597+baopngch18183@users.noreply.github.com>

--- a/BlazorApp3/Client/Pages/EditMovieAdmin.razor
+++ b/BlazorApp3/Client/Pages/EditMovieAdmin.razor
@@ -5,53 +5,6 @@
 @using Firebase.Storage
 @attribute [Authorize(Roles ="Admin")]
 
-@*<div></div>
-
-@if (movie == null)
-{
-    <p>
-        <em>Loading...</em>
-    </p>
-}
-else
-{
-    <EditForm Model="@movie" OnValidSubmit="@HandleValidSubmit">
-    <DataAnnotationsValidator/>
-    <ValidationSummary/>
-    MovieId
-    <InputText  @bind-Value="@movie.MovieId"/><br>
-    StudioId
-    <InputText  @bind-Value="@movie.StudioId"/><br>
-    MovieGenre
-    <InputText  @bind-Value="@movie.MovieGenre"/><br>
-    MovieName
-    <InputText  @bind-Value="@movie.MovieName"/><br>
-    PremiereDate
-    <InputDate  @bind-Value="@movie.PremiereDate"/><br>
-
-    <button type="submit">Submit</button>
-</EditForm>
-
-<div>@content</div>
-
-<div>After pick a file it auto Upload. If it is not a movie or image correct MIME it will not be uploaded.</div>
-<div>Movie Up</div>
-<InputFile OnChange="OnChooseMovieFile" />
-
-<div>Image Up</div>
-<InputFile OnChange="OnChooseImageFile" />
-
-
-<div>If your upload more 500MB click this button</div>
-<button type="submit" @onclick="@Upload">Upload</button>
-    
-}
-
-<div>@mp</div>
-<div>@ip</div>*@
-
-
-
 <head>
 	<meta charset="UTF-8">
 	<!-- Fontawesome CDN Link -->
@@ -113,7 +66,14 @@ else
 										<i class="far fa-calendar-alt"></i>
 										<input type="date" placeholder="Premiere Date" @bind="@movie.PremiereDate"  required>
 										<a>Pre Date</a>
-									</div>									
+									</div>	
+                                    
+                                    <div class="input-box">
+										<i class="far fa-calendar-alt"></i>
+										<input type="text" placeholder="Premiere Date" @bind="@movie.MoviesDescription"  required>
+										<a>MoviesDescription</a>
+									</div>	
+
 									<div class="button input-box">
 										<input type="submit" value="Confirm">
 									</div>
@@ -159,10 +119,6 @@ else
 
         protected override async Task OnInitializedAsync()
         {
-            if (Id == null)
-            {
-                _navigationManager.NavigateTo("/MovieAdmin");
-            }
             movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Admin/EditMovie/{Id}");
             linkIframe = $"{_httpClient.BaseAddress}Admin/MovieUpload/{Id}";
         }
