--- a/MauiApp2/MauiApp2/Pages/Logout.razor
+++ b/MauiApp2/MauiApp2/Pages/Logout.razor
@@ -1,5 +1,5 @@
 ﻿<h3>logout</h3>
-@using MauiApp2.Services
+@using BlazorApp3.Client.Services
 @inject IAccountService _accountService;
 
 @page "/logout"
