--- a/MauiApp2/MauiApp2/Pages/DepositCustomer.razor
+++ b/MauiApp2/MauiApp2/Pages/DepositCustomer.razor
@@ -1,5 +1,7 @@
 ﻿@using Braintree
 <h3>DepositCustomer</h3>
+<h3>If you cann't paypal turn your ad block off</h3>
+
 @inject IJSRuntime JS
 @page "/Deposit"
 @attribute [Authorize(Roles ="Customer")]
