--- a/MauiApp2/MauiApp2/Pages/EditMovieAdmin.razor
+++ b/MauiApp2/MauiApp2/Pages/EditMovieAdmin.razor
@@ -5,53 +5,6 @@
 @using Firebase.Storage
 @attribute [Authorize(Roles ="Admin")]
 
-@*<div></div>
-
-@if (movie == null)
-{
-    <p>
-        <em>Loading...</em>
-    </p>
-}
-else
-{
-    <EditForm Model="@movie" OnValidSubmit="@HandleValidSubmit">
-    <DataAnnotationsValidator/>
-    <ValidationSummary/>
-    MovieId
-    <InputText  @bind-Value="@movie.MovieId"/><br>
-    StudioId
-    <InputText  @bind-Value="@movie.StudioId"/><br>
-    MovieGenre
-    <InputText  @bind-Value="@movie.MovieGenre"/><br>
-    MovieName
-    <InputText  @bind-Value="@movie.MovieName"/><br>
-    PremiereDate
-    <InputDate  @bind-Value="@movie.PremiereDate"/><br>
-
-    <button type="submit">Submit</button>
-</EditForm>
-
-<div>@content</div>
-
-<div>After pick a file it auto Upload. If it is not a movie or image correct MIME it will not be uploaded.</div>
-<div>Movie Up</div>
-<InputFile OnChange="OnChooseMovieFile" />
-
-<div>Image Up</div>
-<InputFile OnChange="OnChooseImageFile" />
-
-
-<div>If your upload more 500MB click this button</div>
-<button type="submit" @onclick="@Upload">Upload</button>
-    
-}
-
-<div>@mp</div>
-<div>@ip</div>*@
-
-
-
 <head>
 	<meta charset="UTF-8">
 	<!-- Fontawesome CDN Link -->
@@ -113,7 +66,14 @@ else
 										<i class="far fa-calendar-alt"></i>
 										<input type="date" placeholder="Premiere Date" @bind="@movie.PremiereDate"  required>
 										<a>Pre Date</a>
-									</div>									
+									</div>	
+                                    
+                                    <div class="input-box">
+										<i class="far fa-calendar-alt"></i>
+										<input type="text" placeholder="Premiere Date" @bind="@movie.MoviesDescription"  required>
+										<a>MoviesDescription</a>
+									</div>	
+
 									<div class="button input-box">
 										<input type="submit" value="Confirm">
 									</div>
@@ -152,20 +112,14 @@ else
         private IBrowserFile movieFile;
         private IBrowserFile imageFile;
         private string content;
-        private readonly string mp;
-        private readonly string ip;
-        private string linkUp;
+        private string mp;
+        private string ip;
         private bool more = false;
         private string linkIframe;
 
         protected override async Task OnInitializedAsync()
         {
-            if (Id == null)
-            {
-                _navigationManager.NavigateTo("/MovieAdmin");
-            }
             movie = await _httpClient.GetFromJsonAsync<MovieModel>($"Admin/EditMovie/{Id}");
-            linkUp = $"/Admin/MovieUpload/{movie.MovieId}/{movie.StudioId}";
             linkIframe = $"{_httpClient.BaseAddress}Admin/MovieUpload/{Id}";
         }
 
@@ -198,9 +152,9 @@ else
                 char[] tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
                 string token = new string(tokena);
                 FirebaseStorageTask task = new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(movie.StudioId).Child(movie.MovieId).Child("Movie").PutAsync(movieFile.OpenReadStream(long.MaxValue));
-                task.Progress.ProgressChanged += async (s, e) =>
+                task.Progress.ProgressChanged += (s, e) =>
                 {
-                    content = e.Percentage.ToString();
+                    mp = e.Percentage.ToString();
                 };
                 try
                 {
@@ -234,9 +188,9 @@ else
                 char[] tokena = await _httpClient.GetFromJsonAsync<char[]>("User/GetToken");
                 string token = new string(tokena);
                 FirebaseStorageTask task = new FirebaseStorage("movie2-e3c7b.appspot.com", new FirebaseStorageOptions { AuthTokenAsyncFactory = async () => await Task.FromResult(await Task.FromResult(token)), ThrowOnCancel = true, HttpClientTimeout = TimeSpan.FromHours(2) }).Child(movie.StudioId).Child(movie.MovieId).Child("Image").PutAsync(imageFile.OpenReadStream(long.MaxValue));
-                task.Progress.ProgressChanged += async (s, e) =>
+                task.Progress.ProgressChanged += (s, e) =>
                 {
-                    content = e.Percentage.ToString();
+                    ip = e.Percentage.ToString();
                 };
                 try
                 {
@@ -252,7 +206,7 @@ else
                 content = "Incorrect MIME";
             }
         }
-        private async Task Upload()
+        private void Upload()
         {
             more = true;
         }
