--- a/BlazorApp3/Client/Shared/NavMenu.razor
+++ b/BlazorApp3/Client/Shared/NavMenu.razor
@@ -20,7 +20,7 @@
                     @*<i class='bx bxl-c-plus-plus icon'></i>*@
                     @*<i class='bx bxs-radiation'></i>*@
                     <i class='bx bx-tv'></i>
-                    <div class="logo_name">MovieTV</div>
+                    <div class="logo_name"><a href="/" class="logo_name">MovieTV</a></div>
                     <i class='bx bx-menu' id="btn"></i>
                 </div>
                 <ul class="nav-list">
