--- a/BlazorApp3/MauiApp2/Pages/Login.razor
+++ b/BlazorApp3/MauiApp2/Pages/Login.razor
@@ -1,7 +1,8 @@
 ﻿@inject IJSRuntime JS
 @inject IAccountService _accountService;
 @page "/login"
-@using BlazorApp3.Client.Services
+
+@using MauiApp2.Services
 
 <head>
 	<meta charset="UTF-8">
