--- a/BlazorApp3/MauiApp2/Pages/Logout.razor
+++ b/BlazorApp3/MauiApp2/Pages/Logout.razor
@@ -1,5 +1,5 @@
 ﻿<h3>logout</h3>
-@using BlazorApp3.Client.Services
+@using MauiApp2.Services
 @inject IAccountService _accountService;
 
 @page "/logout"
