--- a/BlazorApp3/MauiApp2/Shared/NavMenu.razor
+++ b/BlazorApp3/MauiApp2/Shared/NavMenu.razor
@@ -20,7 +20,7 @@
                     @*<i class='bx bxl-c-plus-plus icon'></i>*@
                     @*<i class='bx bxs-radiation'></i>*@
                     <i class='bx bx-tv'></i>
-                    <div class="logo_name">MovieTV</div>
+                    <div class="logo_name"><a href="/" class="logo_name">MovieTV</a></div>
                     <i class='bx bx-menu' id="btn"></i>
                 </div>
                 <ul class="nav-list">
@@ -219,12 +219,7 @@
                 <div class="text">@Body</div>
 
             </section>
-
-
-
-        
-
-
+            
         @*<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
             <nav class="flex-column">
                 <div class="nav-item px-3">
@@ -337,7 +332,7 @@
         {
             await JS.InvokeVoidAsync("NavMenu");
         }
-
+        
     }
     private bool collapseNavMenu = true;
         private string NavMenuCssClass => collapseNavMenu ? "collapse" : null;
