--- a/BlazorApp3/MauiApp2/_Imports.razor
+++ b/BlazorApp3/MauiApp2/_Imports.razor
@@ -6,14 +6,17 @@
 @using Microsoft.JSInterop
 @using MauiApp2
 @using MauiApp2.Shared
+@using Microsoft.AspNetCore.Authorization
 @inject NavigationManager _navigationManager
 @inject HttpClient _httpClient
-@using BlazorApp3.Shared
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.Extensions.Logging
 @inject ILoggerProvider LoggerProvider
 @using System.Security.Claims
 @using Microsoft.AspNetCore.Authorization
+@inject ILogger<Error> Logger
 @using MauiApp2.Services
 @inject IJSRuntime JS
+@using System.Reflection
+@using BlazorApp3.Shared
 @using System.Net.Http.Json
