--- a/BlazorApp3/MauiApp2/Shared/NavMenu.razor
+++ b/BlazorApp3/MauiApp2/Shared/NavMenu.razor
@@ -219,7 +219,7 @@
                 <div class="text">@Body</div>
 
             </section>
-            
+            <div style="text-align: center">@GetType().Assembly.GetName().Version.ToString()</div>
         @*<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
             <nav class="flex-column">
                 <div class="nav-item px-3">
