--- a/BlazorApp3/Client/Shared/NavMenu.razor
+++ b/BlazorApp3/Client/Shared/NavMenu.razor
@@ -217,9 +217,9 @@
             <section class="home-section">
                 @*<div class="text">Dashboard Movie Brazor</div>*@
                 <div class="text">@Body</div>
-
+                
             </section>
-            
+            <div style="text-align: center">@GetType().Assembly.GetName().Version.ToString()</div>
         @*<div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
             <nav class="flex-column">
                 <div class="nav-item px-3">
