--- a/BlazorApp3/Client/Shared/NavMenu.razor
+++ b/BlazorApp3/Client/Shared/NavMenu.razor
@@ -96,8 +96,15 @@
                                     <i class='bx bx-movie'></i>
                                     <span class="links_name">Movie Management</span>
                                 </a>
-                                <span class="tooltip">Movie Managementt</span>
-                            </li>                            
+                                <span class="tooltip">Movie Management</span>
+                            </li>      
+                            <li>
+                                <a href="ReadFeedBack">
+                                    <i class='bx bx-movie'></i>
+                                    <span class="links_name">Read Feed Back</span>
+                                </a>
+                                <span class="tooltip">Read Feed Back</span>
+                            </li>  
                         </Authorized>
                     </AuthorizeView>
                     <AuthorizeView Roles="Customer">
